adding options to dashboard

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -39,6 +39,7 @@
   <a
     *ngIf="isLoggedIn && user"
     mat-button
+    routerLink="/admin/profile"
     class="example-icon favorite-icon me-5 ms-4"
     aria-label="Example icon-button with share icon"
   >
