--- a/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/src/app/pages/admin/sidebar/sidebar.component.html
@@ -7,10 +7,14 @@
     <button mat-list-item routerLink="/admin/profile">
       <mat-icon mat-list-icon>account_circle</mat-icon> Profile
     </button>
-    <button mat-list-item routerLink="/admin/profile">
-      <mat-icon mat-list-icon>add_circle_outline</mat-icon> Categories
+    <button mat-list-item routerLink="/admin/categories">
+      <mat-icon mat-list-icon>list </mat-icon> Categories
     </button>
-    <button mat-list-item routerLink="/admin/profile">
+    <button mat-list-item routerLink="/admin/add-categories">
+      <mat-icon mat-list-icon>add_circle_outline</mat-icon>
+      Add Categories
+    </button>
+    <button mat-list-item routerLink="/admin/quizzes">
       <mat-icon mat-list-icon>quiz</mat-icon> Quizzes
     </button>
     <button mat-list-item routerLink="/admin/profile">
