--- a/src/app/pages/admin/view-quizzez/view-quizzez.component.html
+++ b/src/app/pages/admin/view-quizzez/view-quizzez.component.html
@@ -20,5 +20,7 @@
   </mat-card-actions>
 </mat-card>
 <div class="container text-center mt-3">
-  <button mat-raised-button color="accent">Add New Quiz</button>
+  <button routerLink="/admin/add-quiz" mat-raised-button color="accent">
+    Add New Quiz
+  </button>
 </div>
