completing add quiz module

--- a/src/app/pages/admin/view-quizzez/view-quizzez.component.html
+++ b/src/app/pages/admin/view-quizzez/view-quizzez.component.html
@@ -13,7 +13,7 @@
       Max Marks: {{ q.maxMarks }}
     </button>
     <button mat-stroked-button color="accent" class="ms-3">
-      Questions: {{ q.numberOfQuestions }}
+      Questions: {{ q.numberOfQuestion }}
     </button>
     <button mat-stroked-button color="accent" class="ms-3">Update</button>
     <button mat-stroked-button color="accent" class="ms-3">Attempts</button>
