--- a/src/app/pages/admin/add-quiz/add-quiz.component.html
+++ b/src/app/pages/admin/add-quiz/add-quiz.component.html
@@ -1,16 +1,25 @@
 <mat-card>
+  {{ quizData | json }}
   <h1>Add new Quiz</h1>
   <div class="container my-3">
     <div class="row.col-md-8.offset-md-2">
-      <form action="">
+      <form action="" (ngSubmit)="addQuiz()">
         <mat-form-field class="w-100" appearance="fill">
           <mat-label>Enter Title</mat-label>
-          <input type="text" name="title" placeholder="Enter Here" matInput />
+          <input
+            [(ngModel)]="quizData.title"
+            type="text"
+            name="title"
+            placeholder="Enter Here"
+            matInput
+            required
+          />
         </mat-form-field>
         <mat-form-field class="w-100" appearance="fill">
           <mat-label>Enter Description</mat-label>
           <textarea
             type="text"
+            [(ngModel)]="quizData.description"
             name="description"
             placeholder="Enter Here"
             matInput
@@ -25,6 +34,7 @@
               <input
                 type="text"
                 name="maxMarks"
+                [(ngModel)]="quizData.maxMarks"
                 placeholder="Enter Here"
                 matInput
               />
@@ -35,6 +45,7 @@
               <mat-label>Number of Questions</mat-label>
               <input
                 type="text"
+                [(ngModel)]="quizData.numberOfQuestion"
                 name="numberOfQuestions"
                 placeholder="Enter Here"
                 matInput
@@ -42,13 +53,13 @@
             </mat-form-field>
           </div>
         </div>
-        <mat-slide-toggle class="" [checked]="false">
+        <mat-slide-toggle name="active" [(ngModel)]="quizData.active" class="">
           Publish Status
         </mat-slide-toggle>
         <br />
         <mat-form-field class="mt-3 w-100">
           <mat-label>Categories</mat-label>
-          <mat-select name="category">
+          <mat-select name="category" [(ngModel)]="quizData.category.cid">
             @for (category of categories; track category) {
             <mat-option [value]="category.cid">{{ category.title }}</mat-option>
             }
