--- a/src/app/pages/admin/view-quizzez/view-quizzez.component.html
+++ b/src/app/pages/admin/view-quizzez/view-quizzez.component.html
@@ -17,6 +17,14 @@
     </button>
     <button mat-stroked-button color="accent" class="ms-3">Update</button>
     <button mat-stroked-button color="accent" class="ms-3">Attempts</button>
+    <button
+      mat-stroked-button
+      color="warm"
+      class="ms-3"
+      (click)="deleteQuiz(q.qId)"
+    >
+      Delete
+    </button>
   </mat-card-actions>
 </mat-card>
 <div class="container text-center mt-3">
