--- a/src/app/pages/admin/view-quizzez/view-quizzez.component.html
+++ b/src/app/pages/admin/view-quizzez/view-quizzez.component.html
@@ -15,7 +15,14 @@
     <button mat-stroked-button color="accent" class="ms-3">
       Questions: {{ q.numberOfQuestion }}
     </button>
-    <button mat-stroked-button color="accent" class="ms-3">Update</button>
+    <button
+      mat-stroked-button
+      color="accent"
+      class="ms-3"
+      [routerLink]="'/admin/quiz/' + q.qId"
+    >
+      Update
+    </button>
     <button mat-stroked-button color="accent" class="ms-3">Attempts</button>
     <button
       mat-stroked-button
