finish add questions in a quiz

--- a/src/app/pages/admin/view-quizzez/view-quizzez.component.html
+++ b/src/app/pages/admin/view-quizzez/view-quizzez.component.html
@@ -8,7 +8,13 @@
     <p>{{ q.description }}</p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-flat-button color="accent">Questions</button>
+    <button
+      [routerLink]="'/admin/view-questions/' + q.qId + '/' + q.title"
+      mat-flat-button
+      color="accent"
+    >
+      Questions
+    </button>
     <button mat-stroked-button color="accent" class="ms-3">
       Max Marks: {{ q.maxMarks }}
     </button>
