--- a/src/app/pages/admin/view-quiz-questions/view-quiz-questions.component.html
+++ b/src/app/pages/admin/view-quiz-questions/view-quiz-questions.component.html
@@ -36,6 +36,16 @@ Add questions to {{ qTitle }}
           <p class="mt-3"><b>Correct Answer:</b> {{ q.answer }}</p>
         </div>
       </mat-card-content>
+      <mat-card-content>
+        <button
+          mat-raised-button
+          color="warn"
+          (click)="deleteQuestion(q.quesId)"
+        >
+          Delete
+        </button>
+        <button mat-raised-button color="primary">Update</button>
+      </mat-card-content>
     </mat-card>
   </div>
 </div>
