--- a/src/app/pages/admin/view-quiz-questions/view-quiz-questions.component.html
+++ b/src/app/pages/admin/view-quiz-questions/view-quiz-questions.component.html
@@ -1,5 +1,4 @@
-Add questions to {{ qTitle }}
-
+<h2 [innerHTML]="'Add questions to ' + qTitle"></h2>
 <div class="row">
   <div class="col-md-12">
     <div class="container text-center">
