attemp quiz module

--- a/src/app/pages/user/instructions/instructions.component.html
+++ b/src/app/pages/user/instructions/instructions.component.html
@@ -52,7 +52,12 @@
         </ul>
       </mat-card-content>
       <mat-card-actions style="justify-content: center">
-        <button class="mt-5" mat-raised-button color="primary">
+        <button
+          class="mt-5"
+          mat-raised-button
+          color="primary"
+          (click)="startQuiz()"
+        >
           Start Quiz
         </button>
       </mat-card-actions>
