--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" *ngIf="!isSubmitted">
   <div class="row">
     <div class="col-md-2">
       <h3>Instructions</h3>
@@ -15,37 +15,86 @@
             <b> Q{{ i + 1 }}) </b>
             <span [innerHTML]="q.content"></span>
           </p>
-          <mat-divider> </mat-divider>
+          <mat-divider></mat-divider>
           <div class="row mt-4">
             <div class="col-md-6">
-              <input type="radio" [value]="q.option1" [name]="i" />{{
-                q.option1
-              }}
+              <input
+                [(ngModel)]="q.givenAnswer"
+                type="radio"
+                [value]="q.option1"
+                [name]="'question' + i"
+              />{{ q.option1 }}
             </div>
             <div class="col-md-6">
-              <input type="radio" [value]="q.option2" [name]="i" />{{
-                q.option2
-              }}
+              <input
+                [(ngModel)]="q.givenAnswer"
+                type="radio"
+                [value]="q.option2"
+                [name]="'question' + i"
+              />{{ q.option2 }}
             </div>
           </div>
           <div class="row mt-4">
             <div class="col-md-6">
-              <input type="radio" [value]="q.option3" [name]="i" />{{
-                q.option3
-              }}
+              <input
+                [(ngModel)]="q.givenAnswer"
+                type="radio"
+                [value]="q.option3"
+                [name]="'question' + i"
+              />{{ q.option3 }}
             </div>
             <div class="col-md-6">
-              <input type="radio" [value]="q.option4" [name]="i" />{{
-                q.option4
-              }}
+              <input
+                [(ngModel)]="q.givenAnswer"
+                type="radio"
+                [value]="q.option4"
+                [name]="'question' + i"
+              />{{ q.option4 }}
             </div>
           </div>
         </mat-card-content>
       </mat-card>
       <div class="container text-center mt-5">
-        <button mat-raised-button color="primary">Submit Quiz</button>
+        <button mat-raised-button color="primary" (click)="submitQuiz()">
+          Submit Quiz
+        </button>
       </div>
     </div>
-    <div class="col-md-2"></div>
+    <div class="col-md-2">
+      <mat-card style="margin-top: 20%">
+        <mat-card-header>
+          <mat-card-title> Progress </mat-card-title>
+          <mat-card-subtitle>
+            Quiz will automatically submitted when timer reaches to <b>0:00</b>
+          </mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          <h1 class="text-center">{{ getFormattedTime() }}</h1>
+          <mat-spinner
+            mode="determinate"
+            color="accent"
+            style="margin: auto"
+            [value]="(timer / (this.questions.length * 2 * 60)) * 100"
+          ></mat-spinner>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</div>
+
+<!-- show the result -->
+
+<div class="row" *ngIf="isSubmitted">
+  <div class="col-md-6 offset-md-3">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>Quiz Result</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <h1>Marks Scored: {{ marksGot }}/{{ totalMarks }}</h1>
+        <h1>Correct Answers: {{ correctAnswer }}</h1>
+        <h1>Questions Attempted: {{ attempted }}/{{ totalQuestions }}</h1>
+      </mat-card-content>
+    </mat-card>
   </div>
 </div>
